--- a/text/intro.tex
+++ b/text/intro.tex
@@ -21,7 +21,7 @@ Beyond resilience and generality, things get more interesting, and we must look 
   \item \label{enum:resilience} Resilience: highly resistant from being stopped, corrupted and censored.
   \item \label{enum:generality} Generality: able to perform Turing-complete computation.
   \item \label{enum:performance} Performance: able to perform computation quickly and at low cost.
-  \item \label{enum:coherency} Coherency: the causal relationship possible between different elements of state and how thus how well individual applications may be composed.
+  \item \label{enum:coherency} Coherency: the causal relationship possible between different elements of state and thus how well individual applications may be composed.
   \item \label{enum:accessibility} Accessibility: negligible barriers to innovation; easy, fast, cheap and permissionless.
 \end{enumerate}
 
