fix typo intro.tex

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -49,7 +49,7 @@ We begin with a brief overview of present scaling approaches in blockchain techn
 
 We follow with a broad overview of the protocol in section \ref{sec:overview} outlining the major areas including the Polka Virtual Machine (\textsc{pvm}), the consensus protocols Safrole and \textsc{Grandpa}, the common clock and build the foundations of the formalism.
 
-We then continue with the full protocol definition split into two parts: firstly the correct on-chain state-transition formula helpful for all nodes wishing to validator the chain state, and secondly, in sections \ref{sec:workpackagesandworkreports} and \ref{sec:bestchain} the honest strategy for the off-chain actions of any actors who wield a validator key.
+We then continue with the full protocol definition split into two parts: firstly the correct on-chain state-transition formula helpful for all nodes wishing to validate the chain state, and secondly, in sections \ref{sec:workpackagesandworkreports} and \ref{sec:bestchain} the honest strategy for the off-chain actions of any actors who wield a validator key.
 
 The main body ends with a discussion over the performance characteristics of the protocol in section \ref{sec:discussion} and finally conclude in section \ref{sec:conclusion}.
 
