Readme and some forecast updates

--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -85,5 +85,5 @@ Note that the augmented punish-set is utilized when determining $\kappa'$ to nul
 
 The judgement marker must contain exactly the sequence of report hashes judged not as confidently valid (\ie either controversial or invalid). Formally:
 \begin{equation}
-  \mathbf{H}_j \equiv \sq{r \mid \tup{r, t} \orderedin \mathbf{J}, t \ne 0}
+  \mathbf{H}_j \equiv \sq{r \mid \tup{r, t} \orderedin \mathbf{J}, t \ne \floor{\nicefrac{2}{3}\mathsf{V}} + 1}
 \end{equation}
