--- a/graypaper.tex
+++ b/graypaper.tex
@@ -4,14 +4,14 @@
 \color{white}
 
 %\pagecolor{white}
-%\AddToShipoutPicture{
-%  \checkoddpage
-%  \ifoddpage
-%    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayr.png}}
-%  \else
-%    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayl.png}}
-%\fi
-%}
+\AddToShipoutPicture{
+  \checkoddpage
+  \ifoddpage
+    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayr.png}}
+  \else
+    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayl.png}}
+\fi
+}
 
 \begin{document}
 
