Move to the DAv2 model (WiP)

--- a/preamble.tex
+++ b/preamble.tex
@@ -84,6 +84,7 @@
 \newcommand*{\N}{\mathbb{N}}
 \newcommand*{\Y}{\mathbb{Y}}
 \newcommand*{\Z}{\mathbb{Z}}
+\newcommand*{\G}{\mathbb{G}}
 \newcommand*{\orderedin}{\ensuremath{\mathrel{\mathrlap{<}{\scalebox{0.95}[1]{$-$}}}}}
 \newcommand*{\using}{\text{let }}
 \newcommand*{\where}{ \text{where }}
@@ -133,8 +134,9 @@
 \newcommand*{\ceil}[1]{\left\lceil#1\right\rceil}
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
+\newcommand*{\transpose}{{}^\text{T}}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.1.1 - \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.1.1 - \today}}
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.0 - \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.0 - \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
