--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -1,6 +1,5 @@
 \section{Erasure Coding}\label{sec:erasurecoding}
 
-\newcommand*{\transpose}{{}^\text{T}}
 \newcommand{\join}{\text{join}}
 \newcommand{\spl}{\text{split}}
 
@@ -14,8 +13,8 @@ Formally we begin by defining two utility functions for splitting some large seq
   \forall n, k \in \N :\ &\join(\mathbf{c} \in \seq{\Y_n}_k) \in \Y_{k\cdot n} \equiv \mathbf{c}_0 \concat \mathbf{c}_1 \concat \dots
 \end{align}
 
-We define ${}^\text{T}\mathbf{x}$ as the transposition of the sequence-of-sequences $\mathbf{x}$:
-\begin{equation}
+We define the transposition operator hence:
+\begin{equation}\label{eq:transpose}
   {}^\text{T}[[\mathbf{x}_{0, 0}, \mathbf{x}_{0, 1}, \mathbf{x}_{0, 2}, \dots], [\mathbf{x}_{1, 0}, \mathbf{x}_{1, 1}, \dots], \dots] \equiv [[\mathbf{x}_{0, 0}, \mathbf{x}_{1, 0}, \mathbf{x}_{2, 0}, \dots], [\mathbf{x}_{0, 1}, \mathbf{x}_{1, 1}, \dots], \dots]
 \end{equation}
 
