--- a/text/overview.tex
+++ b/text/overview.tex
@@ -40,7 +40,7 @@ Validators, who are the set of economic actors uniquely privileged to help build
 
 Our state also tracks two aspects of each core: $\alpha$, the authorization requirement which work done on that core must satisfy at the time of being reported on-chain, together with the queue which fills this, $\varphi$; and $\rho$, each of the cores' currently assigned \emph{report}, the availability of whose \emph{work-package} must yet be assured by a super-majority of validators.
 
-Finally, details of the most recent blocks and time are tracked in $\beta$ and $\tau$ respectively and ongoing disputes are tracked in $\bm{\psi}$.
+Finally, details of the most recent blocks and time are tracked in $\beta$ and $\tau$ respectively and past judgements are tracked in $\bm{\psi}$.
 
 \subsubsection{State Transition Dependency Graph}
 
