--- a/text/ack.tex
+++ b/text/ack.tex
@@ -2,7 +2,7 @@
 
 Much of this present work is based in large part on the work of others. The Web3 Foundation research team and in particular Alistair Stewart and Jeff Burdges are responsible for \textsc{Elves}, the security apparatus of Polkadot which enables the possibility of in-core computation for \Jam. The same team is responsible for Sassafras, \textsc{Grandpa} and \textsc{Beefy}.    
 
-Safrole is a mild simplification of Sassafras and was made under the careful review of Davide Gallosi and Alistair Stewart.
+Safrole is a mild simplification of Sassafras and was made under the careful review of Davide Galassi and Alistair Stewart.
 
 The original CoreJam \textsc{rfc} was refined under the review of Bastian Köcher and Robert Habermeier and most of the key elements of that proposal have made their way into the present work.
 
