More drafting work

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -40,7 +40,7 @@
     \item[$\bar{\mathbb{F}}$] The set of Bandersnatch Ring\textsc{vrf} proofs. See section \ref{sec:cryptography}.
     \item[$\bandersnatch{R}{C}{M}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $R$, context $C$ and message $M$. A subset of $\bar{\mathbb{F}}$. See section \ref{sec:cryptography}.
   \end{description}
-  \item[$\mathbb{G}$] Unused.
+  \item[$\mathbb{G}$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_S$. See equation \ref{eq:segment}.
   \item[$\H$] The set of 32-octet cryptographic values. A subset of $\Y_{32}$. $\H$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
     \item[$\H_B$] The set of Bandersnatch public keys. A subset of $\Y_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
@@ -132,7 +132,7 @@
   %  \item[$\mathcal{J}$] Unused.
   \item[$\mathcal{K}(\dots)$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
   %  \item[$\mathcal{L}$] Unused.
-  \item[$\mathcal{M}_2(\dots)$] The binary Merklization function. See appendix \ref{sec:merklization}.
+  \item[$\mathcal{M}_S(\dots)$] The binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\mathcal{M}_S(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   \item[$\mathcal{N}(\dots)$] The erasure-coding chunks function. See appendix \ref{sec:erasurecoding}.
   %\item[$\mathcal{O}$] Unused.
