--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -22,11 +22,11 @@ The final state transition is then:
     \end{aligned}
     \;\rtup}}^\mathsf{H} \\
     \where \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r)\\
-    \also r &= \mathcal{M}_2(\orderby{x}{\se(x) \mid x \in \mathbf{C}}, \mathcal{H}_K)
+    \also r &= \mathcal{M}_S(\orderby{x}{\se(x) \mid x \in \mathbf{C}}, \mathcal{H}_K)
 \end{aligned}
 \end{equation}
 
-Thus, we extend the recent history with the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it. Note that the accumulation-result tree root $r$ is derived from $\mathbf{C}$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_2$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
+Thus, we extend the recent history with the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it. Note that the accumulation-result tree root $r$ is derived from $\mathbf{C}$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_S$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
 
 The state-trie root is as being the zero hash, $\H^0$ which while inaccurate at the end state of the block $\beta'$, it is nevertheless safe since $\bm{\beta'}$ is not utilized except to define the next block's $\bm{\beta^\dagger}$, which contains a corrected value for this.
 
