--- a/text/notation.tex
+++ b/text/notation.tex
@@ -90,7 +90,7 @@ To denote the active domain (\ie set of keys) of a dictionary $\mathbf{d} \in \d
   \mathcal{V}(\mathbf{d} \in \mathbb{D}) &\equiv \{\ v \mid \exists k : (k \mapsto v) \in \mathbf{d}\ \}
 \end{align}
 
-Note that since the output of $\mathcal{V}$ is a set, should different keys with equal values appear in the dictionary, the set will only contain one such value.
+Note that since the co-domain of $\mathcal{V}$ is a set, should different keys with equal values appear in the dictionary, the set will only contain one such value.
 
 \subsection{Tuples}\label{sec:tuples}
 
